# sphedron

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  test.yml
docs/: equi_refine.md  fast_refine.md  icosphere.md
docs/markdown/: icosphere.md
docs/source/: conf.py  index.rst
docs/source/modules/: meshes.rst
docs/source/tutorials/: icosphere.rst  meshes.rst
examples/: Discrete_Laplacian.ipynb  faces.ipynb  icosphere_transfer.ipynb  length_distribution.py  mesh_transfer.ipynb  plot_2d-Copy1.ipynb  plot_3d.py  plot_vertices.py  refine_edge.ipynb  relative positions.ipynb  repuirements.txt  show_cube.py  show_trimesh.py  transform_grid.ipynb  transform_grid.py
sphedron/: __init__.py  base.py  cube.py  extra.py  helpers.py  icosphere.py  mesh.py  octasphere.py  rectangular.py  refine.py  regrid.py  transfer.py  transfers.py  transform.py  triangular.py  utils.py
sphedron/mesh/: __init__.py  base.py  refinables.py
sphedron/utils/: __init__.py  extra.py  geo.py  helpers.py  mesh.py  plots.py  refine.py  transform.py
tests/: fastest_nearest.py  rotations.py  run_tests.py  test_mesh.py  test_query.py  test_rotations.py
