[tool.poetry]
name = "sphedron"
version = "0.1.0"
description = "Polyhedron-based meshes for the sphere"
authors = ["Ayoub Ghriss <dev@ayghri.com>"]
readme = "README.md"

[tool.poetry.urls]
Homepage = "https://github.com/ayghri/sphedron"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.0.1"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
shapely = {version="^2.0.5", optional = true}
cartopy = {version="^0.23.0", optional = true}
matplotlib = { version= "^3.9.2", optional=true}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[tool.poetry.extras]
plot = ["cartopy", "shapely", "matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
